# MongrelDB-Kit

./: .gitignore  .yamllint  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/kit-perf/: Cargo.toml
crates/kit-perf/bench/: README.md
crates/kit-perf/bench/py/: bench.py
crates/kit-perf/bench/ts/: bench.ts
crates/kit-perf/src/: bench_daemon.rs  common.rs  main.rs  seed.rs
crates/mongreldb-kit/: Cargo.toml  build.rs
crates/mongreldb-kit-cli/: Cargo.toml
crates/mongreldb-kit-cli/src/: main.rs
crates/mongreldb-kit-cli/tests/: cli.rs  data_commands.rs  sql_interrupt.rs
crates/mongreldb-kit-core/: Cargo.toml
crates/mongreldb-kit-core/src/: check.rs  external.rs  keys.rs  lib.rs  migrations.rs  planner.rs  procedure.rs  query.rs  schema.rs  trigger.rs  validation.rs
crates/mongreldb-kit-core/tests/: procedure_migrations.rs
crates/mongreldb-kit-python/: Cargo.toml
crates/mongreldb-kit-python/src/: lib.rs
crates/mongreldb-kit/src/: arrow_util.rs  db.rs  error.rs  internal.rs  lib.rs  migrate.rs  pushdown.rs  query.rs  remote.rs  schema.rs  search.rs  tsv.rs  txn.rs
crates/mongreldb-kit/tests/: approx.rs  bulk_guard_batching.rs  embedding_providers.rs  explain.rs  fixes.rs  guards.rs  incremental.rs  integration.rs  join_pushdown.rs  set_similarity.rs  sql_cancellation.rs  sql_savepoints.rs  streaming.rs  time_travel.rs  tsv.rs
docs/: README.md  audit-0533-0541-todo.md  auth-enforcement-spec.md  cli.md  constraints.md  defaults.md  errors.md  extended-sql-and-virtual-tables.md  internal-tables.md  migrations.md  production-checklist.md  python.md  query-builder.md  rust.md  schema.md  spec.md  sql-cancellation.md  stored-procedures.md  testing.md  transactions.md  triggers.md  types.md  typescript.md
python/mongreldb_kit/: pyproject.toml
python/mongreldb_kit/mongreldb_kit/: __init__.py  _schema.py  remote.py
python/tests/: conftest.py  test_admin_methods.py  test_adversarial.py  test_basic.py  test_creative.py  test_deep_adversarial.py  test_embedding_source.py  test_live_remote.py  test_query_builder.py  test_remote.py  test_round4.py  test_server_binary_finder.py  test_sql_cancellation.py  test_upsert.py
scripts/: bench-cli.sh  bench-daemon.sh  bump-mongreldb-version.sh  bump-version.sh
tests/conformance/: README.md
tests/conformance/fixtures/: aggregates.json  ann.json  bytes_prefix.json  contains.json  ctes.json  deletes.json  encrypted.json  inserts.json  joins.json  keys.json  learned_range.json  like.json  migration_failure.json  migrations.json  null_filter.json  phase1_dml.json  procedures.json  queries.json  schema.json  sparse.json  subqueries.json  updates.json  views.json
tests/conformance/fixtures/expected/: aggregates.json  bytes_prefix.json  contains.json  ctes.json  deletes.json  encrypted.json  inserts.json  joins.json  learned_range.json  like.json  null_filter.json  queries.json  subqueries.json  updates.json
tests/conformance/python/: test_conformance.py
tests/conformance/rust/: Cargo.toml
tests/conformance/rust/src/: lib.rs  main.rs  remote.rs
tests/conformance/rust/tests/: conformance.rs
tests/conformance/typescript/: runner.test.ts
