[workspace]
members = [
    "crates/mongreldb-kit-core",
    "crates/mongreldb-kit",
    "crates/mongreldb-kit-python",
    "crates/mongreldb-kit-cli",
    "tests/conformance/rust",
]
resolver = "2"

[patch.crates-io]
mongreldb-core = { git = "https://github.com/visorcraft/MongrelDB.git", rev = "6ea6adc76bf14bc0aaa32401771852c562492917" }
mongreldb-query = { git = "https://github.com/visorcraft/MongrelDB.git", rev = "6ea6adc76bf14bc0aaa32401771852c562492917" }
mongreldb-server = { git = "https://github.com/visorcraft/MongrelDB.git", rev = "6ea6adc76bf14bc0aaa32401771852c562492917" }
