[package]
name = "mongreldb-kit-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "mongreldb-kit"
path = "src/main.rs"

[dependencies]
mongreldb-kit = { path = "../mongreldb-kit" }
mongreldb-kit-core = { path = "../mongreldb-kit-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
