[package]
name = "mongreldb-kit-cli"
version = "0.63.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Command-line tools for MongrelDB Kit: schema validation, migration apply/plan/status, drift diffing, and typed code generation."
repository = "https://github.com/visorcraft/MongrelDB-Kit"
keywords = ["mongreldb", "database", "cli", "migrations", "codegen"]
categories = ["database", "command-line-utilities"]

[[bin]]
name = "mongreldb-kit"
path = "src/main.rs"

[dependencies]
mongreldb-kit = { path = "../mongreldb-kit", version = "0.63.1" }
mongreldb-kit-core = { path = "../mongreldb-kit-core", version = "0.63.1" }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
ctrlc = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
