[package]
name = "mongreldb-kit-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
regex = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
insta = "1"
