[package]
name = "mongreldb-kit-core"
version = "0.22.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core, language-neutral model for MongrelDB Kit: schema, key encoding, validation, constraint planning, migration planning, and query AST."
repository = "https://github.com/visorcraft/MongrelDB-Kit"
keywords = ["mongreldb", "database", "schema", "migrations", "query-builder"]
categories = ["database"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1"
regex = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
insta = "1"
