[package]
name = "mongreldb-kit-python"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "mongreldb_kit_py"
crate-type = ["cdylib"]

[dependencies]
mongreldb-kit = { path = "../mongreldb-kit" }
mongreldb-kit-core = { path = "../mongreldb-kit-core" }
pyo3 = { version = "0.29", features = ["extension-module"] }
serde_json = "1"
