[package]
name = "mongreldb-kit"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Schema-aware, storage-backed application persistence layer for MongrelDB with migrations, relational constraints, and a query builder."
repository = "https://github.com/visorcraft/MongrelDB-Kit"
keywords = ["mongreldb", "database", "orm", "migrations", "transactions"]
categories = ["database"]

[dependencies]
bincode = "1"
mongreldb-kit-core = { path = "../mongreldb-kit-core" }
mongreldb-core = { git = "https://github.com/visorcraft/MongrelDB.git", tag = "v0.17.0", features = ["encryption"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1"
parking_lot = "0.12"
regex = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
