[project]
name = "mongreldb-kit"
version = "0.34.2"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "../../crates/mongreldb-kit-python/Cargo.toml"
python-source = "."
module-name = "mongreldb_kit.mongreldb_kit_py"
