[package]
name = "conformance-runner"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tempfile = "3"

[dependencies.mongreldb-kit]
path = "../../../crates/mongreldb-kit"
